# curiosity

./: .dockerignore  .gitattributes  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  cli  environment.yaml  environment_gpu.yaml  experiments.sh  pyproject.toml  run_allennlp.sh  run_local.sh  run_slurm.sh  slurm-run.sh
configs/: baseline_model.jsonnet  model.jsonnet  paraphrase_curiosity_seq2seq.jsonnet  paraphrase_wow_seq2seq.jsonnet
curiosity/: baseline_models.py  baseline_reader.py  bert.py  cli.py  db.py  metrics.py  models.py  nn.py  paraphrase_models.py  predictors.py  reader.py  similarity.py  stats.py  util.py
curiosity/tests/: test_metrics.py  test_reader.py
dialog_data/: .gitattributes  curiosity_dialogs.json  curiosity_dialogs.test.json  curiosity_dialogs.test_zero.json  curiosity_dialogs.train.json  curiosity_dialogs.val.json  fact_db_links.json  wiki2vec_entity_100d.txt  wiki_sql.sqlite.db
