[tool.poetry]
name = "curiosity"
version = "0.1.0"
description = ""
authors = ["Pedro Rodriguez <me@pedro.ai>"]

[tool.poetry.dependencies]
python = "^3.7"
allennlp = "0.8.5"
torch = "1.1.0"
pandas = "^1.1.2"
scipy = "^1.5.2"
numpy = "^1.19.2"
scikit-learn = "0.20.0"
click = "^7.1.2"
tqdm = "^4.50.0"
sqlalchemy = "^1.3.19"
plotnine = "^0.7.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
ipython = "^7.18.1"
pytest = "^6.1.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
